--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=1100, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
   <title>dulong</title>
@@ -46,12 +46,12 @@
                       <ul class="socials__list">
                         <li class="socials__item">
                           <a href="#" class="socials__link socials__link--telegram">
-                            <img src="./img/telegram.svg" alt="telegram">
+                            <img src="./img/telegram.svg" alt="telegram" class="telegram">
                           </a>
                         </li>
                         <li class="socials__item">
                           <a href="#" class="socials__link socials__link--wa">
-                            <img src="./img/whatsapp.svg" alt="wa">
+                            <img src="./img/whatsapp.svg" alt="wa" class="wa">
                           </a>
                         </li>
                       </ul>
